update conda env file

--- a/envs/environment.yml
+++ b/envs/environment.yml
@@ -2,10 +2,13 @@ name: ner
 channels:
   - defaults
   - conda-forge
+  - kehang
+  - pytorch
 dependencies:
   - python=3
   - pytorch
   - tqdm
+  - m2s
   - pip:
       - seqeval
       - pytorch_pretrained_bert
